# codex-plugins

./: .gitmodules  AGENTS.md  README.md  index.ts  package.json  ssh-exec-mcp.ts
.agents/plugins/: marketplace.json
examples/: pi-agent.mcp.json
plugins/atoms-plugin/: README.md
plugins/atoms-plugin/.codex-plugin/: plugin.json
plugins/atoms-plugin/scripts/: install-vasp-source.sh
plugins/atoms-plugin/skills/atoms-skill/: SKILL.md
plugins/atoms-plugin/skills/vasp-helper/: README.md  SKILL.md
plugins/atoms-plugin/skills/vasp-helper/source/src/plugins/: .gitlab-ci.yml  README.md  interface_cpp.cpp  interface_cpp.h  interface_fortran.F  make-release.mk  makefile  pyproject.toml
plugins/atoms-plugin/skills/vasp-helper/source/src/plugins/src/vasp/: __init__.py  __init__.pyi  _adjust_dataclass.py  _apply_interface.py  _entry_points.py  _force_and_stress.py  _local_potential.py  _machine_learning.py  _mpi_grid.py  _neighbors.py  _occupations.py  _structure.py  force_field.py  typing.py
plugins/my-ppt/: README.md
plugins/my-ppt/.codex-plugin/: plugin.json
plugins/my-ppt/assets/: README.md
plugins/my-ppt/scripts/: anchor_inject.py  check_slide_plan.py  outline_to_slide_plan.py
plugins/my-ppt/tests/: test_anchor_inject.py
plugins/singbox/.codex-plugin/: plugin.json
plugins/ssh-exec/: .mcp.json  README.md  package.json
plugins/ssh-exec/.codex-plugin/: plugin.json
plugins/ssh-exec/scripts/: output-tail-sink.ts  session-manager.ts  ssh-exec-mcp.test.ts  ssh-exec-mcp.ts  ssh-exec.test.ts  ssh-exec.ts  ssh-hosts.ts  stream-output.ts
(+544 files in other folders)
