[project]
name = "vasp"
version = "6.6.0"
description = "Python library to communicate with the internals of VASP"
authors = [
    {name = "VASP Software GmbH"},
]
dependencies = [
    "numpy>=1.26.2",
    "pybind11>=2.11.1",
    "ase>=3.22.1",
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
]
format = [
    "black>=23.11.0",
]
